--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,22 @@
     <title>Curriculum Vitae Joaquín Ortega</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
+
 <body>
-    <h2>Curriculum Vitae</h2>
-    <img class="border-box" src="assets/imgs/perrito_enojado.jpeg"  alt="perrito enojado" width="150" height="150">
+
+    <header>
+        <h2>Curriculum Vitae</h2>
+
+    </header>
+    <img class="border-box" src="assets/imgs/perrito_enojado.jpeg" alt="perrito enojado" width="150" height="150">
     <h3>Joaquín Ortega Raggio</h3>
     <h4>Resumen</h4>
-    <p>Administrador Público e Ingeniero Comercial mención Economía de profesión, con experiencia en el desarrollo de proyectos 
-        para fondos concursables para ONG's, gestión de presupuesto, contrataciones y compras públicas en el Estado. Orientación
+    <p>Administrador Público e Ingeniero Comercial mención Economía de profesión, con experiencia en el desarrollo de
+        proyectos
+        para fondos concursables para ONG's, gestión de presupuesto, contrataciones y compras públicas en el Estado.
+        Orientación
         al trabajo en equipo, solución de problemas y aprendizaje autodidacta.
-         </p>
+    </p>
     <h4>Información Personal</h4>
     <ul>
         <li>Nombre: Joaquín Omar Ortega Raggio</li>
@@ -24,9 +32,10 @@
     </ul>
     <h4>Formación</h4>
     <p>En el ámbito privado, principalmente me he desempeñado como encargado administrativo en una ONG para personas
-        en situación de discapacidad, capacitando y encontrando empleo a más de 60 PcD en la adjudicación de proyecto +CAPAZ de SENCE, 
-        adjudicando 120 y 200 MM para la ONG. En el ámbito público, me he desempeñado como encargado de procesos 
-        administrativos y presupuestarios, llevando a cabo la coordinación regional de todas las Seremis de Cultura, 
+        en situación de discapacidad, capacitando y encontrando empleo a más de 60 PcD en la adjudicación de proyecto
+        +CAPAZ de SENCE,
+        adjudicando 120 y 200 MM para la ONG. En el ámbito público, me he desempeñado como encargado de procesos
+        administrativos y presupuestarios, llevando a cabo la coordinación regional de todas las Seremis de Cultura,
         apoyando a los encargados de regiones en el área administrativa y presupuestaria.</p>
     <h4>Estudios Formales</h4>
     <ol>
@@ -42,7 +51,9 @@
         <li>Rstudio - completado Career track de Data Analyst en Datacamp</li>
         <li>SQL - en proceso de completar el Career track de Data Analyst en Datacamp, </li>
 
-        <p>Linkedin: <a href="https://www.linkedin.com/in/joaqu%C3%ADn-ortega-raggio-b1160310a/">Joaquín Ortega Raggio</a></p>
+        <p>Linkedin: <a href="https://www.linkedin.com/in/joaqu%C3%ADn-ortega-raggio-b1160310a/">Joaquín Ortega
+                Raggio</a></p>
         <a href="portafolio.html">Portafolio</a>
 </body>
+
 </html>
